--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.24.0",
+    "date-fns": "^3.6.0",
     "framer-motion": "^4.1.17",
     "html2canvas": "^1.4.1",
     "react": "^16.13.1",
+    "react-datepicker": "^4.10.0",
     "react-dom": "^16.13.1",
     "react-dropzone": "^11.5.1",
     "react-icons": "^4.3.1",
