--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "@wojtekmaj/react-daterange-picker": "^6.0.0",
     "axios": "^0.24.0",
     "date-fns": "^3.6.0",
     "framer-motion": "^4.1.17",
